--- a/src/containers/RateConverter/style.css
+++ b/src/containers/RateConverter/style.css
@@ -75,7 +75,12 @@ body {
     -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
     transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
 }
-
+.input_error_label{
+    color: red;
+}
+.input_error{
+    border-color: red;
+}
 .rate_select {
     padding:10px 20px;
     margin: 0;
