--- a/src/containers/RateConverter/style.css
+++ b/src/containers/RateConverter/style.css
@@ -15,7 +15,10 @@
 }
 
 .footer {
-    background: lightgreen;
+    background: transparent;
+    -webkit-box-shadow: 10px 10px 20px -4px rgba(0,0,0,0.29);
+    -moz-box-shadow: 10px 10px 20px -4px rgba(0,0,0,0.29);
+    box-shadow: 10px 10px 20px -4px rgba(0,0,0,0.29);
 }
 
 
