--- a/src/containers/RateConverter/style.css
+++ b/src/containers/RateConverter/style.css
@@ -1,11 +1,11 @@
-.wrapper {
+.wrapper, .footer {
     display: flex;
     flex-flow: row wrap;
     font-weight: bold;
     text-align: center;
 }
 
-.wrapper > * {
+.wrapper > *, .footer > * {
     padding: 10px;
     flex: 1 100%;
 }
@@ -15,12 +15,12 @@
 }
 
 .footer {
+    margin-top: 10px;
     background: transparent;
     -webkit-box-shadow: 10px 10px 20px -4px rgba(0,0,0,0.29);
     -moz-box-shadow: 10px 10px 20px -4px rgba(0,0,0,0.29);
     box-shadow: 10px 10px 20px -4px rgba(0,0,0,0.29);
 }
-
 
 .aside-1 {
     background: transparent;
